# vide-code-spam

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
backend/: Dockerfile  __init__.py  pyproject.toml  requirements-cuda.txt  requirements.txt  run.py
backend/app/: config.py  main.py  security.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  audio.py  clis.py  health.py  workspaces.py
backend/app/core/: agent_manager.py  audio_processor.py  cli_registry.py  formatter.py  git_worktrees.py  pty_backend.py  transcriber.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py
backend/app/services/llm/: __init__.py  base.py  groq_engine.py  ollama_engine.py
backend/app/services/stt/: base.py  faster_whisper_engine.py  openwhispr_engine.py
backend/app/tools/: __init__.py  install_models.py
backend/app/utils/: audio_utils.py  cuda_utils.py
backend/tests/: test_agent_manager.py  test_audio_processor.py  test_audio_status.py  test_cli_registry.py  test_faster_whisper_config.py  test_git_worktrees.py  test_pty_backend.py  test_security.py  test_transcriber.py  test_workspaces.py
docs/: ARCHITECTURE.md  KNOWN_LIMITATIONS.md  MACOS.md  PUBLISHING.md  RELEASE_CHECKLIST.md
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
scripts/: build-backend-exe.ps1  build-backend-exe.sh  build-electron.ps1  build-electron.sh  build-inserter.ps1  build-windows-installer.ps1  configure-public-github.ps1  export-public-snapshot.ps1  install-models.ps1  install-models.sh  prepare_fleurs_manifest.py  setup.ps1  setup.sh  (+1 more)
(+28 files in other folders)
