[project]
name = "vibe-spam-backend"
version = "0.1.0"
description = "Backend para orquestar múltiples agentes CLI con entrada por voz."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "websockets>=13.0,<17",
    "faster-whisper>=1.0.3,<2",
    "openai>=1.54.0,<3",
    "httpx>=0.27.2,<1",
    "pydub==0.25.1",
    "numpy>=1.26.0,<3",
    "pywinpty>=2.0.14,<4; platform_system=='Windows'",
    "pexpect>=4.9.0,<5; platform_system!='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
cuda = [
    "nvidia-cublas-cu12; platform_system=='Windows'",
    "nvidia-cudnn-cu12; platform_system=='Windows'",
    "nvidia-cuda-runtime-cu12; platform_system=='Windows'",
]

[tool.setuptools]
packages = [
    "backend",
    "backend.app",
    "backend.app.api",
    "backend.app.api.routes",
    "backend.app.core",
    "backend.app.models",
    "backend.app.services",
    "backend.app.services.llm",
    "backend.app.services.stt",
    "backend.app.tools",
    "backend.app.utils",
]

[tool.setuptools.package-dir]
backend = "."

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["ctranslate2.*", "faster_whisper.*", "onnxruntime.*", "pexpect.*", "pydub.*", "winpty.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
